tests/ui/argument-suggestions/too-long.stderr
error[E0308]: mismatched types
  --> $DIR/too-long.rs:37:28
   |
LL |     qux.foo(a, b, c, d, e, f, g, h, i, j, k, l);
   |         ---                ^ expected `i32`, found `&i32`
   |         |
   |         arguments to this method are incorrect
   |
note: method defined here
  --> $DIR/too-long.rs:4:8
   |
LL |     fn foo(
   |        ^^^
...
LL |         f: i32,
   |         ------
help: consider dereferencing the borrow
   |
LL |     qux.foo(a, b, c, d, e, *f, g, h, i, j, k, l);
   |                            +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
